--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         working-directory: ./${{ matrix.service }}
         env:
           DATABASE_URL: postgresql://airline_user:airline_password@localhost:5432/airline_db
-          JWT_SECRET: test-secret-key-for-ci
+          JWT_SECRET: your-secret-jwt-key-change-in-production
           JWT_ALGORITHM: HS256
         run: |
           pytest tests/ -v --cov=src --cov-report=xml --cov-report=term
