--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
           JWT_SECRET: your-secret-jwt-key-change-in-production
           JWT_ALGORITHM: HS256
         run: |
-          pytest tests/ -v --cov=src --cov-report=xml --cov-report=term
+          python -m pytest tests/ -v --cov=src --cov-report=xml --cov-report=term
       
       - name: Upload coverage
         uses: codecov/codecov-action@v3
