--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,8 @@ jobs:
       - name: Install dependencies
         working-directory: ./frontend
         run: |
-          npm install --legacy-peer-deps || npm install
+          npm install --legacy-peer-deps
+          npm install ajv@^8.12.0 --save
       
       - name: Build frontend
         working-directory: ./frontend
