--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "postcss": "^8.4.32",
     "i18next": "^23.7.6",
     "react-i18next": "^13.5.0",
-    "i18next-browser-languagedetector": "^7.2.0"
+    "i18next-browser-languagedetector": "^7.2.0",
+    "ajv": "^8.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
