--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
         working-directory: ./frontend
         run: |
           npm install --legacy-peer-deps
-          npm install ajv@^8.12.0 --save
+          npm install ajv@^8.12.0 ajv-keywords@^5.1.0 --save
       
       - name: Build frontend
         working-directory: ./frontend
