--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "i18next": "^23.7.6",
     "react-i18next": "^13.5.0",
     "i18next-browser-languagedetector": "^7.2.0",
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
