--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,16 +146,16 @@ jobs:
       
       - name: Build all services
         run: |
-          docker-compose build
+          docker compose build
       
       - name: Start services
         run: |
-          docker-compose up -d
+          docker compose up -d
       
       - name: Wait for services
         run: |
           sleep 30
-          docker-compose ps
+          docker compose ps
       
       - name: Check service health
         run: |
@@ -169,5 +169,5 @@ jobs:
       - name: Stop services
         if: always()
         run: |
-          docker-compose down -v
+          docker compose down -v
 
